# bobba-asset-extractor

./: Cargo.toml
src/: asset_extraction.rs  asset_metadata.rs  cli.rs  error.rs  main.rs  runtime.rs
